# cpp_craft_1013

lections/: .~lock.cpp_craft_lec_2_pre.pptx#  cpp_craft_lec_3_pre.pptx  cpp_craft_lec_6_pre.pptx  cpp_craft_lec_7_pre.pptx  cpp_craft_lec_8_pre.pptx
lections/code_examples/008_boost_asio_templates/: _gcc_gen.sh  _msvc_gen_2005_64.bat
lections/code_examples/009_vld_example/: CMakeLists.txt  _msvc_gen_2010_64.bat
lections/code_examples/011_many_threads_example/: CMakeLists.txt  _msvc_gen_2005_64.bat
solutions/Aliaksandr_Talochka/5/: 2  _msvc_gen_2010_32.bat
solutions/Rusovich_Yuriy/minute_calculator/: CMakeLists.txt  _msvc_gen_2008_32.bat
solutions/Rusovich_Yuriy/minute_market_data/: CMakeLists.txt  _msvc_gen_2008_32.bat
solutions/Rusovich_Yuriy/minute_market_data/sources/main/: CMakeLists.txt  main.cpp
solutions/Rusovich_Yuriy/task5/: _msvc_gen_2008_32.bat
solutions/Rusovich_Yuriy/trade_processor_project/: _msvc_gen_2008_32.bat  _msvc_gen_2010_32.bat
solutions/ailyasov/5/: environment.cmake
solutions/ailyasov/trade_processor_project/: CMakeLists.txt  _gcc_gen.sh  _msvc_gen_2012.bat  config.ini  environment.cmake
solutions/aleks_apalikov/Craft/: CMakeLists.txt  _msvc_gen_2005_32.bat  _msvc_gen_2008_32.bat  _msvc_gen_2010_64.bat
solutions/aleks_apalikov/Craft_2/: _gcc_gen.sh  _msvc_gen_2005_32.bat  _msvc_gen_2008_32.bat
solutions/aleks_apalikov/Craft_3/: CMakeLists.txt  _msvc_gen_2008_32.bat
solutions/aleks_apalikov/Craft_4/: _msvc_gen_2008_32.bat
solutions/aleks_apalikov/Craft_5/: _msvc_gen_2008_32.bat
solutions/aleks_apalikov/Craft_6/: CMakeLists.txt  _gcc_gen.sh  _msvc_gen_2005_64.bat  _msvc_gen_2008_32.bat  _msvc_gen_2010_64.bat
solutions/aleks_apalikov/Crafting/: Crafting.sln  _msvc_gen_2008_32.bat
solutions/aleks_apalikov/Crafting 2/: CMakeLists.txt  _msvc_gen_2005_32.bat  buffer.sln
solutions/aleks_apalikov/Crafting_4/: _msvc_gen_2008_32.bat
solutions/aleks_apalikov/bin_reader/: _msvc_gen_2008_32.bat
solutions/alexandr_lapenkov/5/: CMakeLists.txt  _msvc_gen_2010_32.bat
solutions/andrey_zhilka/week5/: _msvc_gen_2008.bat  environment.cmake
solutions/evgen_marchukevich/week3/: CMakeLists.txt  _msvc_gen_2011_64.bat  _msvc_gen_2011_86.bat  input.txt  output.txt  output_901.txt
solutions/evgen_marchukevich/week4/: _msvc_gen_2011_64.bat  _msvc_gen_2011_86.bat  environment.cmake
solutions/evgen_marchukevich/week5/: _msvc_gen_2010_86.bat  _msvc_gen_2011_64.bat  _msvc_gen_2011_86.bat  environment.cmake
solutions/ivan_sidarau/trade_processor_project/: _msvc_gen_2005_64.bat
solutions/nikolay_nikiforchuk/: simple_solution_skeleton.rar  simple_week_skeleton.rar
solutions/peter_moroz/: CMakeLists.txt
solutions/peter_moroz/task-15/: CMakeLists.txt  EarthSurface-inl.h  EarthSurface.h  Island-inl.h  task-15.cpp
solutions/peter_moroz/task-24/: CMakeLists.txt  Task24.cpp  Task24.h  task-24.cpp
solutions/peter_moroz/task-25/: CMakeLists.txt  Message.cpp  Statistics.h  Task25.cpp  Task25.h  task-25.cpp
solutions/peter_moroz/task-26/: CMakeLists.txt  Date.cpp  Task26.cpp  task-26.cpp
tasks/2/: .~lock.puzzles.doc#
tasks/6/: puzzles.doc
tasks/7/: puzzles.doc
(+563 files in other folders)
